[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "pydriver"
case_sensitive = true
quiet = true
# settings below to comply to black formatting rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target-version = ['py38']


[tool.poetry]
name = "pydriver"
version = "0.2.0"
description = "Download selenium WebDriver for Windows, Mac & Linux"
authors = ["Krzysztof Czeronko <krzysztof.czeronko@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pydriver = 'pydriver.pydriver:main'


[tool.poetry.dependencies]
python = "^3.6"
packaging = "^20.1"
fire = "^0.3.1"
humanfriendly = "^8.2"
requests = "^2.24.0"
tabulate = "^0.8.7"
configobj = "^5.0.6"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
changelog-cli = "^0.7.1"
isort = "^5.5.3"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
