[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "pydriver"
case_sensitive = true
quiet = true
# settings below to comply to black formatting rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target-version = ['py38']

[tool.coverage.report]
precision = 2
fail_under = 98.00

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.poetry]
name = "pydriver"
version = "1.0.0-rc13"
description = "Download selenium WebDriver for Windows, Mac & Linux"
authors = ["Krzysztof Czeronko <krzysztof.czeronko@gmail.com>", "Bartosz Sypniewski <bartosz.sypniewski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/czerus/pydriver"
exclude = ["changelog.py", "lint.py", "release.py"]

[tool.poetry.scripts]
pydriver = 'pydriver.pydriver:cli_pydriver'


[tool.poetry.dependencies]
python = "^3.8"
packaging = "^20.1"
fire = "^0.3.1"
humanfriendly = "^8.2"
requests = "^2.24.0"
tabulate = "^0.8.7"
configobj = "^5.0.6"
click = "^7.1.2"
loguru = "^0.5.3"
yaspin = "^2.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
changelog-cli = "^0.7.1"
isort = "^5.5.3"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
pytest = "^6.0.2"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"
pytest-icdiff = "^0.5"
pytest-clarity = "^0.3.0-alpha.0"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
