[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "pydriverr"
case_sensitive = true
quiet = true
# settings below to comply to black formatting rules
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target-version = ['py38']

[tool.coverage.report]
precision = 2
fail_under = 98.00

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.poetry]
name = "pydriverr"
version = "0.3.0"
description = "Download selenium WebDriver for Windows, Mac & Linux"
authors = ["Krzysztof Czeronko <krzysztof.czeronko@gmail.com>", "Bartosz Sypniewski <bartosz.sypniewski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/czerus/pydriverr"
exclude = ["lint.py"]

[tool.poetry.scripts]
pydriverr = 'pydriverr.pydriverr:cli_pydriverr'


[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
packaging = "^22.0"
humanfriendly = "^10.0"
requests = "^2.28.1"
tabulate = "^0.9.0"
configobj = "^5.0.6"
click = "^8.1.3"
loguru = "^0.6.0"
yaspin = "^2.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.9"
changelog-cli = "^0.7.1"
isort = "^5.11.3"
flake8 = "^6.0.0"
flake8-isort = "^5.0.3"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"
pytest-icdiff = "^0.6"
pytest-clarity = "^1.0.1"
flake8-black = "^0.3.6"

[tool.poetry.group.dev.dependencies]
describerr = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
